# device_soc_allwinner

./: OAT.xml  README.en.md  README.md  README_zh.md
t507/: OAT.xml  soc.gni
t507/hardware/: BUILD.gn
t507/hardware/codec/: BUILD.gn
t507/hardware/codec/media/etc/: cedarc.conf
t507/hardware/display/: BUILD.gn
t507/hardware/display/include/: display_common.h  display_gralloc_private.h
t507/hardware/display/src/display_device/: drm_connector.cpp  drm_connector.h  drm_crtc.h  drm_device.cpp  drm_device.h  drm_display.cpp  drm_display.h  drm_vsync_worker.cpp  hdi_composer.cpp  hdi_composer.h  hdi_device_interface.cpp  hdi_display.cpp  hdi_display.h  hdi_drm_composition.cpp  hdi_drm_composition.h  hdi_drm_layer.cpp  hdi_drm_layer.h  hdi_layer.cpp  hdi_layer.h  hdi_netlink_monitor.cpp  hdi_session.cpp
t507/hardware/display/src/display_gfx/: display_gfx.c
t507/hardware/display/src/display_gralloc/: display_gralloc.c  display_gralloc_gbm.c  display_gralloc_gbm.h  seed_gbm.c  seed_gbm.h
t507/hardware/gpu/: BUILD.gn
t507/hardware/gpu/lib-mesa/: libEGL.so.1.4.0  libGLESv1_CM.so.1  libGLESv2.so.2  libGLESv2.so.2.1.0  libgbm.so.1.0.0
t507/hardware/rga/: BUILD.gn
t507/hardware/rga/include/: GrallocOps.h  RgaApi.h  RgaMutex.h  RgaSingleton.h  RockchipRga.h  drmrga.h  im2d.h  platform_gralloc4.h  rga.h
t507/hardware/wifi/: BUILD.gn
t507/hardware/wifi/ap6212/: wpa_supplicant.conf
t507/hardware/wifi/xr829/etc/: wpa_supplicant.conf
t507/patches/config/: t507_standard_defconfig
t507/patches/harmony/base-startup-init/: 0001-modify-init-config.patch
t507/patches/harmony/drivers-hdf_core/: 0001-Add-tp-and-audio-config.patch
t507/patches/harmony/foundation-graphic-graphic_2d/: 0001-modify-graphic-gpu-name.patch
t507/patches/hdf/linux-5.10/: hdf.patch
t507/patches/kernel/linux-5.10/: kernel.patch
