# Copyright (C) 2022 VYAGOO TECHNOLOGY Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos/kernel/kernel.gni")

CODEC_ETC_DIR="//device/soc/allwinner/t507/hardware/codec/media/etc"
CODEC_LIB_DIR="//device/soc/allwinner/t507/hardware/codec/media/lib"

if (linux_kernel_version == "linux-5.10") {
  ohos_prebuilt_etc("OmxCore") {
    source = "$CODEC_LIB_DIR/libOmxCore.z.so"
    module_install_dir = "lib"
    install_images = [ "vendor" ]
    part_name = "allwinner_products"
  }

  ohos_prebuilt_etc("OMX_Pluginhw") {
    source = "$CODEC_LIB_DIR/libOMX_Pluginhw.z.so"
    module_install_dir = "lib"
    install_images = [ "vendor" ]
    part_name = "allwinner_products"
  }

  ohos_prebuilt_etc("OmxVdec") {
    source = "$CODEC_LIB_DIR/libOmxVdec.z.so"
    module_install_dir = "lib"
    install_images = [ "vendor" ]
    part_name = "allwinner_products"
  }

  ohos_prebuilt_etc("OmxVenc") {
    source = "$CODEC_LIB_DIR/libOmxVenc.z.so"
    module_install_dir = "lib"
    install_images = [ "vendor" ]
    part_name = "allwinner_products"
  }
}

ohos_prebuilt_etc("cedarc.conf") {
  source = "$CODEC_ETC_DIR/cedarc.conf"
  install_images = [ "vendor" ]
  module_install_dir = "etc"
  part_name = "allwinner_products"
}

group("codec") {
  deps = [
    ":cedarc.conf",
    ":OmxCore",
    ":OMX_Pluginhw",
    ":OmxVdec",
    ":OmxVenc",
  ]
}
