# Copyright (C) 2022 VYAGOO TECHNOLOGY Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos/kernel/kernel.gni")

XR829_ETC_DIR = "//device/soc/allwinner/t507/hardware/wifi/xr829/etc"
XR829_BIN_DIR = "//device/soc/allwinner/t507/hardware/wifi/xr829/bin"

if (linux_kernel_version == "linux-4.19") {
  ohos_prebuilt_etc("boot_xr829_bin") {
    source = "$XR829_BIN_DIR/boot_xr829.bin"
    module_install_dir = "etc/firmware"
    install_images = [ "vendor" ]
    part_name = "allwinner_products"
  }

  ohos_prebuilt_etc("etf_xr829_bin") {
    source = "$XR829_BIN_DIR/etf_xr829.bin"
    module_install_dir = "etc/firmware"
    install_images = [ "vendor" ]
    part_name = "allwinner_products"
  }

  ohos_prebuilt_etc("fw_xr829_bin") {
    source = "$XR829_BIN_DIR/fw_xr829.bin"
    module_install_dir = "etc/firmware"
    install_images = [ "vendor" ]
    part_name = "allwinner_products"
  }

  ohos_prebuilt_etc("sdd_xr829_bin") {
    source = "$XR829_BIN_DIR/sdd_xr829.bin"
    module_install_dir = "etc/firmware"
    install_images = [ "vendor" ]
    part_name = "allwinner_products"
  }
} else if (linux_kernel_version == "linux-5.10") {
  ohos_prebuilt_etc("boot_xr829_bin") {
    source = "$XR829_BIN_DIR/boot_xr829.bin"
    module_install_dir = "lib/firmware"
    install_images = [ "system" ]
    part_name = "allwinner_products"
  }

  ohos_prebuilt_etc("etf_xr829_bin") {
    source = "$XR829_BIN_DIR/etf_xr829.bin"
    module_install_dir = "lib/firmware"
    install_images = [ "system" ]
    part_name = "allwinner_products"
  }

  ohos_prebuilt_etc("fw_xr829_bin") {
    source = "$XR829_BIN_DIR/fw_xr829.bin"
    module_install_dir = "lib/firmware"
    install_images = [ "system" ]
    part_name = "allwinner_products"
  }

  ohos_prebuilt_etc("sdd_xr829_bin") {
    source = "$XR829_BIN_DIR/sdd_xr829.bin"
    module_install_dir = "lib/firmware"
    install_images = [ "system" ]
    part_name = "allwinner_products"
  }
}

ohos_prebuilt_etc("wpa_supplicant.conf") {
  source = "$XR829_ETC_DIR/wpa_supplicant.conf"
  install_images = [ "vendor" ]
  module_install_dir = "misc/wifi/wpa_supplicant"
  part_name = "allwinner_products"
}

ohos_prebuilt_etc("p2p_supplicant.conf") {
  source = "$XR829_ETC_DIR/p2p_supplicant.conf"
  install_images = [ "vendor" ]
  module_install_dir = "misc/wifi/wpa_supplicant"
  part_name = "allwinner_products"
}

group("xr829") {
  deps = [
    ":boot_xr829_bin",
    ":etf_xr829_bin",
    ":fw_xr829_bin",
    ":p2p_supplicant.conf",
    ":sdd_xr829_bin",
    ":wpa_supplicant.conf",
  ]
}
