# Copyright (C) 2022 VYAGOO TECHNOLOGY Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos/kernel/kernel.gni")

AP6212_BIN_DIR = "//device/soc/allwinner/t507/hardware/wifi/ap6212"

ohos_prebuilt_etc("fw_bcm43438a0_bin") {
  source = "$AP6212_BIN_DIR/fw_bcm43438a1.bin"
  module_install_dir = "etc/firmware"
  install_images = [ "vendor" ]
  part_name = "allwinner_products"
}

ohos_prebuilt_etc("fw_bcm43438a0_apsta_bin") {
  source = "$AP6212_BIN_DIR/fw_bcm43438a1_apsta.bin"
  module_install_dir = "etc/firmware"
  install_images = [ "vendor" ]
  part_name = "allwinner_products"
}

ohos_prebuilt_etc("fw_bcm43438a0_p2p_bin") {
  source = "$AP6212_BIN_DIR/fw_bcm43438a1_p2p.bin"
  module_install_dir = "etc/firmware"
  install_images = [ "vendor" ]
  part_name = "allwinner_products"
}

ohos_prebuilt_etc("nvram_txt") {
  source = "$AP6212_BIN_DIR/nvram.txt"
  module_install_dir = "etc/firmware"
  install_images = [ "vendor" ]
  part_name = "allwinner_products"
}

ohos_prebuilt_etc("config_txt") {
  source = "$AP6212_BIN_DIR/config.txt"
  module_install_dir = "etc/firmware"
  install_images = [ "vendor" ]
  part_name = "allwinner_products"
}

ohos_prebuilt_etc("wpa_supplicant.conf") {
  source = "$AP6212_BIN_DIR/wpa_supplicant.conf"
  install_images = [ chipset_base_dir ]
  module_install_dir = "misc/wifi/wpa_supplicant"
  part_name = "allwinner_products"
}

ohos_prebuilt_etc("p2p_supplicant.conf") {
  source = "$AP6212_BIN_DIR/p2p_supplicant.conf"
  install_images = [ chipset_base_dir ]
  module_install_dir = "misc/wifi/wpa_supplicant"
  part_name = "allwinner_products"
}

group("xr829") {
  deps = [
    ":config_txt",
    ":fw_bcm43438a0_apsta_bin",
    ":fw_bcm43438a0_bin",
    ":fw_bcm43438a0_p2p_bin",
    ":nvram_txt",
    ":p2p_supplicant.conf",
    ":wpa_supplicant.conf",
  ]
}
